Aplicação/wordpress-app/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: labwordpress
  name: wordpress
  labels:
    app: wordpress
spec:
  type: ClusterIP  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: wordpress
    tier: frontend
