Aplicação/wordpress-app/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: labwordpress
  name: ingress-template
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
